--- a/hobbies.html
+++ b/hobbies.html
@@ -9,12 +9,7 @@
     <h3>Hobbies</h3>
     <ol type="i">
         <li>Watching sports</li>
-        <li>reading books: 
-            <ol>
-                <li>The shiva trilogy</li>
-                <li>The subtle art of not giving a fuck</li>
-            </ol>
-        </li>
+        <li>reading books </li>
         <li>mobile games</li>
     </ol>
 </body>
